# Valeo_Intership_Ex_2025

./: .editorconfig  .gitignore  README.md
1_Doc/: Subject.md
3_Implementations/: CMakeLists.txt
3_Implementations/include/: DataReceiver.hpp  DataTransmetter.hpp  DataTypes.hpp  ItfAnnotationFileReader.hpp  ItfRawFileReader.hpp  TcpClient.hpp  TcpServer.hpp
3_Implementations/src/: DataReceiver.cpp  DataTransmetter.cpp  TcpClient.cpp  TcpServer.cpp
4_Samples/Internship/: CMakeLists.txt
4_Samples/Internship/src/: prog1.cpp  prog3.cpp
5_External/Help/: CMakeLists.txt
5_External/Valeo/: CMakeLists.txt  generate.sh
5_External/Valeo/inc/: AnnotationFileReader.hpp
5_External/Valeo/src/: integrationApplication.cpp  testAnnotation.cpp
